# SteamPP

./: .gitmodules  CMakeLists.txt  README.md  SteamCrypto.cpp  SteamCrypto.h  cmclient.cpp  cmclient.h  handlers.cpp  steam++.cpp  steam++.h  vcpkg.json
cmake/Modules/: FindCryptoPP.cmake
include/: SteamApi.h  SteamCommunity.h  SteamCrypto.h  WebRequest.h  cmclient.h  consoleColor.h  steam++.h  steamid.h  utils.h
src/: SteamApi.cpp  SteamCommunity.cpp  SteamCrypto.cpp  WebRequest.cpp  cmclient.cpp  handlers.cpp  steam++.cpp  utils.cpp
steam_language/: steam_language.h  steam_language_internal.h
